<resources>
    <string name="app_name">ReOil</string>
    <string name="where_the_world_builds_software">Where the World Builds Software</string>
    <string name="register">Register</string>
    <string name="ConfirmPassword">Input your password again</string>
    <string name="InputPassword">Input your password</string>
    <string name="InputEmail">Input your email</string>
    <string name="InputUsername">Input your username</string>
    <string name="username">Username</string>
    <string name="title_register">Joins Us!</string>
    <string name="detailRegister">Create your Account</string>
    <string name="ConfirmPasswordText">Confirm Password</string>
    <string name="SignUpGoogle">Sign Up with Google</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in_with_google">Sign Up with Google</string>
    <string name="or">Or</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="title_onboarding_1">Trade Your Used Cooking Oil Around Your City</string>
    <string name="description_onboarding_1">Connect with recyclers and contribute to a cleaner city. Join now!</string>
    <string name="title_onboarding_2">Find Nearby Collector on Your Maps</string>
    <string name="description_onboarding_2">Locate nearby collectors with ReOil for easy oil drop-offs</string>
    <string name="title_onboarding_3">Earn Rewards From Your Used Cooking Oil</string>
    <string name="description_onboarding_3">Earn rewards by recycling your cooking oil with ReOil!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remember_me">Remember me</string>
    <string name="not_a_member">Not a member?</string>
    <string name="registerTextButton">Sign Up</string>
    <string name="loginGoogleText">Sign In with google</string>
    <string name="LoginButtonText">Login</string>
    <string name="passwordTitleInput">Password</string>
    <string name="emailTitleInput">Email</string>
    <string name="subTitleLogin">Login to your account</string>
    <string name="TitleLogin">Welcome!</string>
    <string name="default_web_client_id">927578963618-45bg2c6q5nqitb0e0ci6jqtm66tdkg1l.apps.googleusercontent.com</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_password_mismatch">Passwords do not match</string>
    <string name="back_button">btn_back</string>
    <string name="notification_icon">btn_notification</string>
    <string name="tv_title_notification">Welcome!</string>
    <string name="description_notification">You\'ve been enlisted for world change</string>
    <string name="close_notification">Close Notification?</string>
    <string name="hint_password">Input your password</string>
    <string name="hint_email">Input your email</string>
    <string name="TitleMain">Earn Rewards</string>
    <string name="SubTitleMain">From save the world</string>
    <string name="titleNews">News for you!</string>
    <string name="tv_viewAll">View all</string>
    <string name="outline">outline</string>
    <string name="home_asset">home_asset</string>
    <string name="notification">Notification</string>
    <string name="complete">Complete</string>
    <string name="Points">250 Points</string>
    <string name="congrats">Congratulations! You got 250 Points of your used cooking oil.</string>
    <string name="description_news">the impact of used cooking oil on the environment</string>
    <string name="date_news">05 Jun 2024 | 19:55</string>
    <string name="news">News</string>
    <string name="description">Description</string>
    <string name="profile">Profile</string>
    <string name="congratsProfile">You got 250 Points of your used cooking oil</string>
    <string name="nameProfile">Ahmad Damanhuri</string>
    <string name="emailProfile">adam@gmail.com</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="address">Pacific Century Place Tower Level 45 SCBD Lot 10, Jl. Jend. Sudirman No.53,</string>
    <string name="phone">08123456789</string>
    <string name="username_profile">adam24</string>
    <string name="password_profile">adamganteng</string>
    <string name="phoneTextView">Phone</string>
    <string name="addressTextView">Address</string>
    <string name="title_general">General</string>
    <string name="desc_general">Edit Profile Detail, Change Picture...</string>
    <string name="title_location">Location</string>
    <string name="desc_location">Change Address and Pin location.</string>
    <string name="title_settings">Settings</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="scan">Scan</string>
    <string name="guideScan">\"Scan or input your used cooking oil image from the gallery\"</string>
    <string name="desc_logout">Logging out of your account</string>
    <string name="textAboutUs">About us</string>
    <string name="desc_aboutUs">Welcome to ReOil! We transform used cooking oil into valuable resources through our eco-friendly recycling platform. Our mission is to help households and businesses recycle their used cooking oil easily, protecting the environment and supporting the community. With the ReOil app, you can find nearby collection points, exchange used oil for rewards, and help reduce pollution. By choosing ReOil, you become an environmental guardian and earn money, turning waste into wealth.</string>
    <string name="result">Result</string>
    <string name="predict_harga">Rp. 3000/L</string>
    <string name="trade">Trade</string>
    <string name="BackHome">Back to home</string>
    <string name="detail_oil">"The quality of your used cooking oil : "</string>
    <string name="resultScan">Good</string>
    <string name="guideDirect">You will be directed to a map with the collector\'s number to chat.</string>
    <string name="map">Map</string>
    <string name="content_news">Description News</string>
    <string name="title_news">Title News</string>
    <string name="btWhatsApp">WhatsApp</string>
    <string name="guideButtonWA">You will be directed to a map with the collector\'s number to chat.</string>
    <string name="tokoPengepul">Choose location first!</string>
    <string name="InputImage">Upload your Photo Profile</string>
    <string name="form_username">Input your username</string>
    <string name="form_phone">Input your number phone</string>
    <string name="form_address">Input your address</string>
    <string name="titleNewsDetail">News Detail</string>
    <string name="welcome_partner">Welcome, Warung Pamungkas!</string>
    <string name="account">Partner Account</string>
    <string name="harga_update">Rp. 5,000/Liter</string>
    <string name="totalSaldo">1,000,000</string>
    <string name="namaWarung">Mitra Warung Pamungkas</string>
    <string name="welcome_user">Welcome, %1$s</string>
    <string name="aboutus">About Us</string>
    <string name="ourMission">Our Mission</string>
    <string name="welcometoReoil">Welcome to Reoil!</string>
    <string name="descWelcome">The innovative application dedicated to transforming used cooking oil into valuable rewards. At ReOil, we are committed to promoting sustainable practices by providing an easy and rewarding way to recycle used cooking oil. Our mission is to make recycling accessible and beneficial for everyone, ensuring a cleaner environment and a healthier community.</string>
    <string name="howItWorks">How it Works?</string>
    <string name="title_aboutUs">About Us</string>
    <string name="desc_aboutUscont">Take a Look About our App!</string>
    <string name="partnerLogin">Partner Login</string>
    <string name="askPartner">Logged in as a collector?</string>
    <string name="history">History</string>
    <string name="subTitleLoginAdmin">Login to your partner account</string>
    <string name="UserLogin">Login as a user</string>
    <string name="verification">Verification</string>
    <string name="check_email">Check your email!</string>
    <string name="sentemail">We\'ve just sent an email to you at</string>
    <string name="email_sender">reoilproject@gmail.com</string>
    <string name="taplink">Tap on the link to verify your account,</string>
    <string name="didnt_receive">Didn\'t receive email?</string>
    <string name="have_received">I have verified</string>
    <string name="dashboard">Dashboard</string>
    <string name="desc_dashboard">Take a look at your store</string>
    <string name="title_registerPartner">Register as a partner</string>
    <string name="desc_registerPartner">Be a partner with Reoil</string>
    <string name="exchangeTitle">Exchange</string>
    <string name="title_bank">Bank Account</string>
    <string name="desc_bank">Transfer your balance to your bank account</string>
    <string name="title_ewallet">E-Wallet</string>
    <string name="desc_ewallet">Transfer your balance to your E-Wallet account</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="changepassword">Change Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="old_password_hint">input old password</string>
    <string name="new_password_hint">input new password</string>
    <string name="confirm_new_password_hint">input password confirmation</string>

    <string name="user_not_logged_in">User not logged in</string>
    <string name="email_not_verified">Email has not been verified. Please check your email!.</string>
    <string name="verification_email_sent">Verification email has been resent.</string>
    <string name="verification_email_failed">Failed to resend verification email: %1$s</string>
    <string name="wait_seconds">Wait for %1$d seconds</string>
    <string name="store_name">Store Name</string>
    <string name="website">Our Website</string>

    <string-array name="title_notif">
        <item>Congratulations!</item>
        <item>Welcome!</item>
    </string-array>
    <string-array name="description_notif">
        <item>You get 250 points from your redemption</item>
        <item>You\'ve been enlisted for world change</item>
    </string-array>

</resources>