<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.result.ResultActivity">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="23dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_backHome"
            android:layout_width="211dp"
            android:layout_height="41dp"
            android:layout_marginBottom="128dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/BackHome"
            android:textSize="12sp"
            app:cornerRadius="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideDirect"
            app:layout_constraintVertical_bias="0.965" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_trade"
            android:layout_width="211dp"
            android:layout_height="41dp"
            android:layout_marginTop="104dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/trade"
            android:textSize="12sp"
            app:cornerRadius="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/predict_harga" />

        <TextView
            android:id="@+id/tv_titleResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/result"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/tv_detailOil"
            android:layout_width="243dp"
            android:layout_height="231dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_titleResult"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/predict_harga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/predict_harga"
            android:textColor="@color/black"
            android:textSize="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detailOil" />

        <TextView
            android:id="@+id/quality_oil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:alpha="0.5"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/detail_oil"
            android:textColor="@color/black"
            android:textSize="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/predict_harga" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:text="@string/resultScan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quality_oil" />

        <TextView
            android:id="@+id/guideDirect"
            android:layout_width="207dp"
            android:layout_height="34dp"
            android:alpha="0.5"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/guideDirect"
            android:textAlignment="center"
            android:textSize="10dp"
            app:layout_constraintEnd_toEndOf="@+id/bt_trade"
            app:layout_constraintStart_toStartOf="@+id/bt_trade"
            app:layout_constraintTop_toBottomOf="@+id/bt_trade" />

    </androidx.constraintlayout.widget.ConstraintLayout>
