<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.form.FormProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/pp_edit"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/profilepicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_usernameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/InputImage"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pp_edit" />


    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/username"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/username_profile"
        app:layout_constraintEnd_toEndOf="@+id/username_profile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username_profile"
        app:layout_constraintTop_toBottomOf="@+id/tv_usernameProfile"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/username_profile"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_below="@id/tv_usernameProfile"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_edit_text_profile"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/form_username"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_usernameProfile" />


    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/phoneTextView"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/phone_profile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/phone_profile"
        app:layout_constraintTop_toBottomOf="@+id/username_profile" />

    <EditText
        android:id="@+id/phone_profile"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_below="@id/username_profile"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_edit_text_profile"
        android:drawableStart="@drawable/baseline_phone_24"
        android:drawablePadding="10dp"
        android:hint="@string/form_phone"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@+id/username_profile"
        app:layout_constraintStart_toStartOf="@+id/username_profile"
        app:layout_constraintTop_toBottomOf="@+id/username_profile" />

    <TextView
        android:id="@+id/textViewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/addressTextView"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/address_profile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/address_profile"
        app:layout_constraintTop_toBottomOf="@+id/phone_profile" />

    <EditText
        android:id="@+id/address_profile"
        android:layout_width="300dp"
        android:layout_height="95dp"
        android:layout_below="@id/phone_profile"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_edit_text_profile"
        android:drawableStart="@drawable/address"
        android:drawablePadding="10dp"
        android:hint="@string/form_address"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@+id/phone_profile"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="@+id/phone_profile"
        app:layout_constraintTop_toBottomOf="@+id/phone_profile" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/white"
        android:text="@string/save"
        android:textColor="@color/green"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_profile"
        app:layout_constraintVertical_bias="0.714"
        app:strokeColor="@color/green"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>