<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.settings.ChangePasswordActivity">

    <ImageView
        android:id="@+id/bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/title_profilePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/changepassword"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toEndOf="@+id/bt_back"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewOldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_password"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/oldpassword"
        app:layout_constraintEnd_toEndOf="@+id/oldpassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/oldpassword"
        app:layout_constraintTop_toBottomOf="@+id/title_profilePage"
        app:layout_constraintVertical_bias="0.773" />

    <EditText
        android:id="@+id/oldpassword"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_edit_text_profile"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:padding="12dp"
        android:hint="@string/old_password_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_profilePage" />

    <TextView
        android:id="@+id/textViewNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/new_password"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/new_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/new_password"
        app:layout_constraintTop_toBottomOf="@+id/oldpassword" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_below="@id/oldpassword"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_edit_text_profile"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/new_password_hint"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@+id/oldpassword"
        app:layout_constraintStart_toStartOf="@+id/oldpassword"
        app:layout_constraintTop_toBottomOf="@+id/oldpassword" />

    <TextView
        android:id="@+id/textViewConfirmNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/confirm_new_password"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/ConfirmNewPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ConfirmNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/new_password" />

    <EditText
        android:id="@+id/ConfirmNewPassword"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_below="@id/new_password"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_edit_text_profile"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/confirm_new_password_hint"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@+id/new_password"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="@+id/new_password"
        app:layout_constraintTop_toBottomOf="@+id/new_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_gallery"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/save"
        android:textSize="16sp"
        app:cornerRadius="6dp"
        app:iconSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmNewPassword"
        app:layout_constraintVertical_bias="0.038" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>